hphp/hack/test/typecheck/nameof/exact.php
<?hh

class C {}
function exactness_example(): void {
  $k = keyset[C::class];
  $k[nameof C];
}
